--- a/src/styles/pages/Register.css
+++ b/src/styles/pages/Register.css
@@ -131,13 +131,13 @@
     margin-bottom: 20px;
 }
 
-.input-label {
+/* .input-label {
     display: block;
     margin-bottom: 8px;
     font-size: 0.9rem;
     color: #4a5568;
     font-weight: 500;
-}
+} */
 
 .input-icon {
     position: absolute;
