--- a/src/styles/components/admin/UserList.css
+++ b/src/styles/components/admin/UserList.css
@@ -1,4 +1,5 @@
 .user-list {
+    height: 60vh;
     background: white;
     border-radius: 1rem;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
